syntax = "proto3";
import "google/protobuf/empty.proto";
option java_package = "code.showme.pinecone.cdp.artifact";

service TarArtifact {
  rpc push ( TarArtifactRequest) returns (TarArtifactReply) {}
}

message TarArtifactRequest {
  string name = 1;
  string artifactVersion = 2;
  int32  buildNumber = 3;
  string pipelineHistoryUrl = 4;
  string pipelineHistoryId = 5;
  string appId = 6;
  string namespace = 7;

  string url = 12;
}

message TarArtifactReply {
  bool received = 1;
}